# GuildNet

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PLAIN_K8S_MIGRATION.md  README.md  REFACTOR_PER_CLUSTER_SPEC.md  architecture.md  go.mod  go.sum  kubeconfig  todo.md
MetaGuildNet/: CHANGELOG.md  COMPLETE_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  FINAL_COMPREHENSIVE_FIX_SUMMARY.md  FINAL_EXECUTION_SUMMARY.txt  METHODS_VALIDATION_REPORT.md  Makefile  OUTPUT_INDEX.md  QUICK_REFERENCE.md  README_RUN.md  VALIDATION_REPORT.txt  VISUALIZATION_OUTPUT_CONFIRMED.md  VISUAL_REPORT.txt  config.json  dev-config.json  run.py  validate.py  visualize.py
certs/: ca.crt  ca.key  ca.srl  dev.crt  dev.key  server-san.cnf  server.crt  server.csr  server.key
docs/: cluster-settings.md  publish-on-demand.md  tailscale-talos-linux-router.md
k8s/: agent-example-nostorageclass.yaml  agent-example.yaml  hostapp-deploy-patch.yaml  ingress-mvp-notes.yaml  metallb-example.yaml  rethinkdb.yaml  tailscale-subnet-router.yaml.tmpl
metaguildnet/: COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_REVIEW.md  QUICKSTART.md  README.md  TESTING.md  (+3 more)
metaguildnet/python/: README.md  pyproject.toml
metaguildnet/python/src/metaguildnet/: __init__.py
metaguildnet/python/src/metaguildnet/api/: __init__.py  client.py
metaguildnet/python/src/metaguildnet/cli/: __init__.py  cluster.py  database.py  install.py  main.py  verify.py  viz.py  workspace.py
metaguildnet/python/src/metaguildnet/config/: __init__.py  manager.py
metaguildnet/python/src/metaguildnet/installer/: __init__.py  bootstrap.py
metaguildnet/python/src/metaguildnet/visualizer/: __init__.py  dashboard.py
(+253 files in other folders)
